==> Jiu-xiao/libxr/driver/ch/ch32_uart.cpp <==
#include "ch32_uart.hpp"
#include "ch32_dma.hpp"
#include "ch32_gpio.hpp"

ErrorCode CH32UART::SetConfig(UART::Configuration config)
{
  USART_InitTypeDef usart_cfg = {};
  usart_cfg.USART_BaudRate = config.baudrate;
  usart_cfg.USART_StopBits =
      (config.stop_bits == 2) ? USART_StopBits_2 : USART_StopBits_1;

  switch (config.parity)
  {
    case UART::Parity::NO_PARITY:
      usart_cfg.USART_Parity = USART_Parity_No;
      usart_cfg.USART_WordLength = USART_WordLength_8b;
      break;
    case UART::Parity::EVEN:
      usart_cfg.USART_Parity = USART_Parity_Even;
      usart_cfg.USART_WordLength = USART_WordLength_9b;
      break;
    case UART::Parity::ODD:
      usart_cfg.USART_Parity = USART_Parity_Odd;
      usart_cfg.USART_WordLength = USART_WordLength_9b;
      break;
    default:
      return ErrorCode::NOT_SUPPORT;
  }

  usart_cfg.USART_Mode = uart_mode_;
  usart_cfg.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
  USART_DeInit(instance_);
  USART_Init(instance_, &usart_cfg);

  if (uart_mode_ & USART_Mode_Rx)
  {
    USART_DMACmd(instance_, USART_DMAReq_Rx, ENABLE);
    USART_ITConfig(instance_, USART_IT_IDLE, ENABLE);
  }

  if (uart_mode_ & USART_Mode_Tx)
  {
    USART_DMACmd(instance_, USART_DMAReq_Tx, ENABLE);
  }

  USART_Cmd(instance_, ENABLE);

  return ErrorCode::OK;
}

ErrorCode CH32UART::WriteFun(WritePort &port)
{
  CH32UART *uart = CONTAINER_OF(&port, CH32UART, _write_port);
  if (!uart->dma_buff_tx_.HasPending())
  {
    WriteInfoBlock info;
    if (port.queue_info_->Peek(info) != ErrorCode::OK)
    {
      return ErrorCode::EMPTY;
    }

    uint8_t *buffer = nullptr;
    bool use_pending = false;

    // DMA空闲判断
    bool dma_ready = uart->dma_tx_channel_->CNTR == 0;
    if (dma_ready)
    {
      buffer = reinterpret_cast<uint8_t *>(uart->dma_buff_tx_.ActiveBuffer());
    }
    else
    {
      buffer = reinterpret_cast<uint8_t *>(uart->dma_buff_tx_.PendingBuffer());
      use_pending = true;
    }

    if (port.queue_data_->PopBatch(buffer, info.data.size_) != ErrorCode::OK)
    {
      ASSERT(false);
      return ErrorCode::EMPTY;
    }

    if (use_pending)
    {
      uart->dma_buff_tx_.SetPendingLength(info.data.size_);
      uart->dma_buff_tx_.EnablePending();
      // 检查当前DMA是否可切换
      bool dma_ready = uart->dma_tx_channel_->CNTR == 0;
      if (dma_ready && uart->dma_buff_tx_.HasPending())
      {
        uart->dma_buff_tx_.Switch();
      }
      else
      {
        return ErrorCode::FAILED;
      }
    }

    port.queue_info_->Pop(uart->write_info_active_);

    DMA_Cmd(uart->dma_tx_channel_, DISABLE);
    uart->dma_tx_channel_->MADDR =
        reinterpret_cast<uint32_t>(uart->dma_buff_tx_.ActiveBuffer());
    uart->dma_tx_channel_->CNTR = info.data.size_;
    uart->_write_port.write_size_ = info.data.size_;
    DMA_Cmd(uart->dma_tx_channel_, ENABLE);

    uart->write_info_active_.op.UpdateStatus(false, ErrorCode::OK);

    return ErrorCode::FAILED;  // 实际是发起传输成功，但等待DMA完成
  }
  return ErrorCode::FAILED;
}
